NIFI-4239 - Adding CaptureChangePostgreSQL processor to capture data changes (INSERT/UPDATE/DELETE) in PostgreSQL tables via Logical Replication. - use latest version of testcontainers - add logging - add null checks in various places - initial tests - cleanup, fix config, ...